<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/header_text"
        android:text="@string/sign_in"
        android:layout_marginTop="50dp"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/sign_in_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/sign_in_horizontal"
        app:layout_constraintRight_toRightOf="@id/half_line_vertical"
        app:layout_constraintLeft_toLeftOf="@id/half_line_vertical"
        />

    <EditText
        android:id="@+id/userID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30ffffff"
        android:hint="@string/username"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="@id/username_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/username_horizontal"
        app:layout_constraintLeft_toLeftOf="@id/half_line_vertical"
        app:layout_constraintRight_toRightOf="@id/half_line_vertical"
        android:drawableStart="@drawable/baseline_person_outline_24"
        android:drawablePadding="20dp"
        />

    <EditText
        android:id="@+id/businessID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30ffffff"
        android:hint="@string/businessID"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="@id/business_id_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/business_id_horizontal"
        app:layout_constraintLeft_toLeftOf="@id/half_line_vertical"
        app:layout_constraintRight_toRightOf="@id/half_line_vertical"
        android:drawableStart="@drawable/outline_lock_24"
        android:drawablePadding="20dp"
        />

    <EditText
        android:id="@+id/businessPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30ffffff"
        android:hint="@string/business_password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="@id/business_password_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/business_password_horizontal"
        app:layout_constraintLeft_toLeftOf="@id/half_line_vertical"
        app:layout_constraintRight_toRightOf="@id/half_line_vertical"
        android:drawableStart="@drawable/outline_lock_24"
        android:drawablePadding="20dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/design_default_color_secondary"
        android:layout_margin="20dp"
        app:layout_constraintLeft_toLeftOf="@id/half_line_vertical"
        app:layout_constraintRight_toRightOf="@id/half_line_vertical"
        app:layout_constraintTop_toTopOf="@id/login_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/login_horizontal"
        />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="@id/half_line_vertical"
        app:layout_constraintLeft_toLeftOf="@id/half_line_vertical"
        app:layout_constraintTop_toTopOf="@id/forgot_pass_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/forgot_pass_horizontal"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/sign_in_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/username_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/business_id_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/business_password_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.59"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/forgot_pass_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/half_line_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
    

</androidx.constraintlayout.widget.ConstraintLayout>